--- a/styles/style.css
+++ b/styles/style.css
@@ -307,6 +307,7 @@ html {
 }
 
 body {
+  overflow-x: hidden;
   height: 100vh;
   background: -webkit-gradient(linear, left top, right top, from(#0a192f), color-stop(#233554), to(#0a192f));
   background: linear-gradient(90deg, #0a192f, #233554, #0a192f);
